Fixed x overflow for longs links

--- a/src/app/link-list/link-list.component.css
+++ b/src/app/link-list/link-list.component.css
@@ -2,14 +2,12 @@ ul {
     list-style: none;
     padding: 20px;
     max-height: 80vh;
-    overflow: hidden;
-    overflow-y: scroll;
+    overflow-y: hidden scroll;
 }
 
 li {
-    overflow-x: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+    overflow-x: scroll;
+    white-space: normal;
 }
 
 li:nth-child(odd) {
